# fastapi-sqlmodel-starter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  apiserver.py  docker-compose.yml  main.py  main_1.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  enhancement.yaml  failing-test.yaml  flaking-test.yaml
.github/workflows/: ci.yaml  welcome.yml
deploy/: docker-compose-mysql-redis.yml  docker-compose-pgsql-redis.yml  docker-compose.yml
deploy/k8s/: deployment.yml  service.yml
docs/: POPULARIZE.md  POPULARIZE_en.md  README_en.md  VIRTUAL_ENV.md  VIRTUAL_ENV_en.md  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  config.rst  faq.rst  index.rst  usage.rst
fss/: .env.example  Dockerfile  __init__.py  apiserver.py
fss/common/: config.py
fss/common/cache/: cache.py  page_cache.py  redis_cache.py  redis_manager.py
fss/common/enum/: enum.py
fss/common/exception/: exception.py  exception_handler.py
fss/common/persistence/: base_mapper.py  base_model.py  mapper_base.py  model_base.py  sqlmodel_impl.py
fss/common/result/: result.py
fss/common/schema/: schema.py  token.py
fss/common/security/: security.py
fss/common/service/: service.py  service_base.py
fss/common/service/impl/: service_base_impl.py  service_impl.py
fss/common/util/: excel.py  security.py  snowflake.py
fss/middleware/: db_session_middleware.py  ip_block_middleware.py  jwt_middleware.py  rate_limit_middleware.py
fss/migrations/db/: README  README.md
fss/migrations/versions/: 4cbbaaa2be10_init_db.py  947dad7dbfdb_init_project.py  aa3b6ded81f6_add_role_and_user_role_table.py  be65abd0ee39_add_role_and_user_role_table.py
fss/starter/: __init__.py  server.py
fss/starter/system/enum/: system.py
fss/starter/system/exception/: system.py
fss/starter/system/factory/: service_factory.py  sqlsession_factory.py
fss/starter/system/mapper/: role_mapper.py  user_mapper.py  user_role_mapper.py
fss/starter/system/model/: _migrate.py  migrate.py  role_do.py  user_do.py  user_role_do.py
fss/starter/system/router/: system.py  system_router.py
fss/starter/system/schema/: role_schema.py  user_schema.py
fss/starter/system/service/: role_service.py  user_role_service.py  user_service.py
fss/tests/system/v1/: probe_test.py  role_test.py  user_test.py
migrations/: env.py
migrations/versions/: 947dad7dbfdb_init_project.py
script/: docker-compose-mysql-redis.yml  docker-compose-pgsql-redis.yml  docker-compose.yml
script/k8s/: deployment.yml
src/: .env  .env-dev  .env.example  apiserver.py
src/common/: config.py
src/common/cache/: cache.py  page_cache.py  redis_cache.py  redis_manager.py
src/common/exception/: exception_handler.py
src/common/persistence/: model_base.py  sqlmodel_impl.py
src/common/schema/: schema.py
src/common/security/: security.py
src/common/service/impl/: service_base_impl.py
src/common/util/: excel.py
src/fss/: apiserver.py
src/fss/common/: config.py
src/fss/common/cache/: page_cache.py  redis_cache.py  redis_manager.py
src/fss/common/persistence/: base_mapper.py  mapper.py  sqlmodel_impl.py
src/fss/common/result/: result.py
src/fss/common/service/: service.py
src/fss/common/util/: security.py  snowflake.py
src/fss/starter/: server.py
src/main/: __init__.py  server.py
src/main/app/: server.py
src/main/app/common/: config.py
src/main/app/controller/: probe_controller.py  sys_dict_data_controller.py  sys_dict_type_controller.py  sys_menu_controller.py  sys_role_controller.py  sys_role_menu_controller.py  sys_user_controller.py  sys_user_role_controller.py  user_controller.py
src/main/app/entity/: migrate.py  user_entity.py
src/main/app/enums/: __init__.py  auth_error_code.py  biz_error_code.py  enum.py  sys_error_code.py
src/main/app/exception/: __init__.py  auth_error_code.py  auth_exception.py  biz_error_code.py  biz_exception.py  sys_error_code.py  sys_exception.py  system.py
src/main/app/exceptions/: __init__.py  auth_exception.py  biz_exception.py  sys_exception.py
src/main/app/factory/: service_factory.py  sqlsession_factory.py
src/main/app/mapper/: role_mapper.py  sys_dict_data_mapper.py  sys_dict_type_mapper.py  sys_menu_mapper.py  sys_role_mapper.py  sys_role_menu_mapper.py  sys_user_mapper.py  sys_user_role_mapper.py  user_mapper.py  user_role_mapper.py
src/main/app/model/: migrate.py  role_do.py  sys_dict_data_model.py  sys_dict_type_model.py  sys_menu_model.py  sys_role_menu_model.py  sys_role_model.py  sys_user_model.py  sys_user_role_model.py  user_do.py  user_role_do.py
src/main/app/router/: __init__.py  router.py
src/main/app/schema/: role_schema.py  sys_dict_data_schema.py  sys_dict_type_schema.py  sys_menu_schema.py  sys_role_menu_schema.py  sys_role_schema.py  sys_user_role_schema.py  sys_user_schema.py  user_schema.py
src/main/app/service/: role_service.py  sys_dict_data_service.py  sys_dict_type_service.py  sys_menu_service.py  sys_role_menu_service.py  sys_role_service.py  sys_user_role_service.py  sys_user_service.py  user_role_service.py  user_service.py
src/main/common/cache/: cache.py  redis_manager.py
src/main/common/exception/: exception.py
src/main/common/middleware/: db_session_middleware.py  ip_block_middleware.py  jwt_middleware.py  rate_limit_middleware.py
src/main/common/persistence/: mapper_base.py  model_base.py  sqlmodel_impl.py
src/main/common/security/: security.py
src/main/common/service/: service_base.py
src/main/resource/: config-dev.yml  config-prod.yml  config.yml
src/middleware/: db_session_middleware.py  jwt_middleware.py  rate_limit_middleware.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 4cbbaaa2be10_init_db.py  be65abd0ee39_add_role_and_user_role_table.py
src/tests/: probe_test.py  user_test.py
templates/: template1.txt  template3.txt
tests/: fss.db
tests/system/v1/: test_probe.py  test_user.py  user_test.py
(+188 files in other folders)
